--- a/readme.html
+++ b/readme.html
@@ -88,7 +88,7 @@ TD.when {
 </HEAD>
 <BODY>
 <h1>
-SwingOSC <small>-- version 0.59 (built 03-feb-08) --</small>
+SwingOSC <small>-- version 0.60 (built 02-may-08) --</small>
 </h1>
 <h3>statement</h3>
 <TABLE><TR><TD VALIGN="top"><IMG SRC="application.png" ALT=""></TD><TD><p>
@@ -205,6 +205,13 @@ The <code>&quot;test&quot;</code> will just launch SwingOSC so you can see if th
 <LI>complete peakmeterview, add some nice stuff like tree view ...</LI>
 </UL>
 <h3>change history</h3>
+<h4>v0.60 (may 2008 - SVN rev. 77)</h4>
+<UL>
+<LI>sc classes: fixes for control rate scoping, JSCView (handleKeyUp/DownBubbling, focusColor_ dummy,), JPen (addArc, addWedge, addAnnularWedge, setSmoothing), JSCListView (bounds), JSCTextView (bounds, open), adding coarse String-bounds estimator,</LI>
+<LI>synced with new NetUtil and common classes version</LI>
+<LI>fixed loopback for -h rendezvous option (addresses problems on Linux and Windows Vista)</LI>
+<LI>Mac OS X tablet library now universal binary</LI>
+</UL>
 <h4>v0.59 (feb 2008 - SVN rev. 56)</h4>
 <UL>
 <LI>sc classes: JavaObject (added double underscore syntax, calling prRemove from JSCPlug(Container)View), SwingOSC (separate java field, faster booting, bootSync fix), SwingOptions (javaOptions field), SwingGUI (updated), JSCMultiSlider (valueAction_ fix), JSCPopUpMenu (value_ fix), JSCListView (value_ fix), JKnob (was broken), removed JEZSlider, JEZNumber.</LI>
