--- a/SuperCollider/examples/PDF_Export.html
+++ b/SuperCollider/examples/PDF_Export.html
@@ -11,13 +11,11 @@ p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #bf0000}
 p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #000000; min-height: 14.0px}
 p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #606060}
 p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #000000}
-p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco}
 span.s1 {color: #0000bf}
 span.s2 {color: #000000}
 span.s3 {color: #007300}
 span.s4 {color: #606060}
 span.s5 {color: #bf0000}
-span.s6 {color: #0019ba}
 span.Apple-tab-span {white-space:pre}
 </style>
 </head>
@@ -105,15 +103,54 @@ span.Apple-tab-span {white-space:pre}
 <p class="p2"><br></p>
 <p class="p1">// here's another one</p>
 <p class="p4">(</p>
-<p class="p5">~func = {</p>
-<p class="p5"><span class="Apple-tab-span">	</span><span class="s6">JPen</span>.width = 2;</p>
-<p class="p5"><span class="Apple-tab-span">	</span>80.do {</p>
-<p class="p5"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s6">JPen</span>.width = rrand(0,4) + 0.5;</p>
-<p class="p5"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s6">JPen</span>.moveTo(<span class="s6">Point</span>(h.rand, v.rand));</p>
-<p class="p5"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s6">JPen</span>.lineTo(<span class="s6">Point</span>(h.rand, v.rand));</p>
-<p class="p5"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s6">JPen</span>.stroke;</p>
-<p class="p5"><span class="Apple-tab-span">	</span>};</p>
-<p class="p5">};</p>
-<p class="p5">)</p>
+<p class="p4">~func = {</p>
+<p class="p4"><span class="Apple-tab-span">	</span><span class="s1">JPen</span>.width = 2;</p>
+<p class="p4"><span class="Apple-tab-span">	</span>80.do {</p>
+<p class="p4"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s1">JPen</span>.width = rrand(0,4) + 0.5;</p>
+<p class="p4"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s1">JPen</span>.moveTo(<span class="s1">Point</span>(h.rand, v.rand));</p>
+<p class="p4"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s1">JPen</span>.lineTo(<span class="s1">Point</span>(h.rand, v.rand));</p>
+<p class="p4"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s1">JPen</span>.stroke;</p>
+<p class="p4"><span class="Apple-tab-span">	</span>};</p>
+<p class="p4">};</p>
+<p class="p4">)</p>
+<p class="p2"><br></p>
+<p class="p1">// you can also use iText to create a PDF screenshot from a window</p>
+<p class="p1">// ; the quality depends however on the particular widgets used</p>
+<p class="p1">// (pure vector graphics widgets will scale smoothly, while those</p>
+<p class="p1">// using bitmap images will scale poorly)</p>
+<p class="p2"><br></p>
+<p class="p4">(</p>
+<p class="p4">~pdfScreenShot = { <span class="s1">arg</span> view, fileName, width = 595, height = 842;</p>
+<p class="p4"><span class="Apple-tab-span">	</span><span class="s1">var</span> g, bounds, pageSize, doc, writerC, stream, writer, cb, tp, g2, viewJ;</p>
+<p class="p2"><br></p>
+<p class="p4"><span class="Apple-tab-span">	</span>g<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>= view.server;</p>
+<p class="p4"><span class="Apple-tab-span">	</span>bounds<span class="Apple-tab-span">	</span>= view.bounds;</p>
+<p class="p4"><span class="Apple-tab-span">	</span>pageSize<span class="Apple-tab-span">	</span>= <span class="s1">JavaObject</span>( <span class="s4">"com.lowagie.text.Rectangle"</span>, g, 0, 0, width, height );</p>
+<p class="p4"><span class="Apple-tab-span">	</span>doc<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>= <span class="s1">JavaObject</span>( <span class="s4">"com.lowagie.text.Document"</span>, g, pageSize, 80, 60, 60, 60 ); <span class="s5">// margins don't matter</span></p>
+<p class="p3"><span class="s2"><span class="Apple-tab-span">	</span>writerC<span class="Apple-tab-span">	</span>= </span><span class="s1">JavaObject</span><span class="s2">.getClass( </span>"com.lowagie.text.pdf.PdfWriter"<span class="s2">, g );</span></p>
+<p class="p4"><span class="Apple-tab-span">	</span>stream<span class="Apple-tab-span">	</span>= <span class="s1">JavaObject</span>( <span class="s4">"java.io.FileOutputStream"</span>, g, fileName );</p>
+<p class="p4"><span class="Apple-tab-span">	</span>writer<span class="Apple-tab-span">	</span>= writerC.getInstance__( doc, stream );</p>
+<p class="p4"><span class="Apple-tab-span">	</span>doc.open;</p>
+<p class="p4"><span class="Apple-tab-span">	</span>cb<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>= writer.getDirectContent__;</p>
+<p class="p4"><span class="Apple-tab-span">	</span>tp<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>= cb.createTemplate__( bounds.width, bounds.height );</p>
+<p class="p4"><span class="Apple-tab-span">	</span>g2<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>= tp.createGraphics__( bounds.width, bounds.height );</p>
+<p class="p4"><span class="Apple-tab-span">	</span>viewJ<span class="Apple-tab-span">	</span>= <span class="s1">JavaObject</span>.basicNew( view.id, g );</p>
+<p class="p4"><span class="Apple-tab-span">	</span>viewJ.paint( g2 );</p>
+<p class="p4"><span class="Apple-tab-span">	</span>g2.dispose;</p>
+<p class="p4"><span class="Apple-tab-span">	</span>cb.addTemplate( tp, (width - bounds.width) / 2, (height - bounds.height) / 2 );<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s5">// centered</span></p>
+<p class="p4"><span class="Apple-tab-span">	</span>doc.close;</p>
+<p class="p2"><br></p>
+<p class="p4"><span class="Apple-tab-span">	</span>doc.destroy; cb.destroy; g2.destroy; tp.destroy;</p>
+<p class="p4"><span class="Apple-tab-span">	</span>writer.destroy; stream.destroy; writerC.destroy; pageSize.destroy;</p>
+<p class="p4">};</p>
+<p class="p4">)</p>
+<p class="p2"><br></p>
+<p class="p1">// some look-and-feels operate on the OS level and are not</p>
+<p class="p1">// pure java (e.g. apple's aqua). they are not exported properly, so</p>
+<p class="p1">// we ensure here that the default "metal" look-and-feel is used</p>
+<p class="p3"><span class="s2">~ui = </span><span class="s1">JavaObject</span><span class="s2">.getClass( </span>"javax.swing.UIManager"<span class="s2"> );</span></p>
+<p class="p3"><span class="s2">~ui.setLookAndFeel( </span>"javax.swing.plaf.metal.MetalLookAndFeel"<span class="s2"> );</span></p>
+<p class="p4"><span class="s1">JSCWindow</span>.viewPalette;</p>
+<p class="p4">~pdfScreenShot.( <span class="s1">JSCWindow</span>.allWindows.last.view, <span class="s4">"/Users/rutz/Desktop/test2.pdf"</span>, h, v );</p>
 </body>
 </html>
