switching to ScissLib usage

--- a/readme.html
+++ b/readme.html
@@ -88,7 +88,7 @@ TD.when {
 </HEAD>
 <BODY>
 <h1>
-SwingOSC <small>-- version 0.60 (built 02-may-08) --</small>
+SwingOSC <small>-- version 0.61SVN (built 01-oct-08) --</small>
 </h1>
 <h3>statement</h3>
 <TABLE><TR><TD VALIGN="top"><IMG SRC="application.png" ALT=""></TD><TD><p>
@@ -98,7 +98,7 @@ SwingOSC is (C)opyright 2005&ndash;2008 by Hanns Holger Rutz. All rights reserve
 </p></TD></TR></TABLE><p>
 For project status, API and current version, visit <a href="http://www.sciss.de/swingOSC/" class="ext">www.sciss.de/swingOSC</a>.
 </p><p>
-For OSC communication, SwingOSC uses the NetUtil library, which is licensed under the <A HREF="licenses/NetUtil-License.txt">GNU Lesser General Public License (LGPL)</A>. The compiled library is included, for sourcecode and details visit <a href="http://www.sciss.de/netutil/" class="ext">www.sciss.de/netutil</a>.
+For OSC communication, SwingOSC uses the NetUtil library, which is licensed under the <A HREF="licenses/NetUtil-License.txt">GNU Lesser General Public License (LGPL)</A>. The compiled library is included, for sourcecode and details visit <a href="http://www.sciss.de/netutil/" class="ext">www.sciss.de/netutil</a>. SwingOSC also builds on top of <A HREF="http://www.sciss.de/scissLib" TARGET="_blank" CLASS="ext">ScissLib</A> which is licensed under the <A HREF="licenses/ScissLib-License.txt">GNU General Public License</A>.
 </p>
 <h3>
 security note
