some extra methods for SoundFileView (timeCursorEditable), adding SwingGUI:panel

--- a/SuperCollider/Help/SwingOSC/JSCSoundFileView.html
+++ b/SuperCollider/Help/SwingOSC/JSCSoundFileView.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCSoundFileView. last mod: 13-jan-08 sciss
+<p>This class is meant as an emulation of SCSoundFileView. last mod: 17-oct-08 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
@@ -23,6 +23,8 @@
 <tr><td colspan="2" class="oscTabSection">extended functionality</td></tr>
 <tr><td class="oscTabKey">action</td><td class="oscTabValue">additional arguments for type of action and parameters</td></tr>
 <tr><td class="oscTabKey">cache</td><td class="oscTabValue">management of waveform cache</td></tr>
+<tr><td class="oscTabKey">timeCursorEditable_</td><td class="oscTabValue">additional method</td></tr>
+<tr><td class="oscTabKey">viewFrames_</td><td class="oscTabValue">additional method</td></tr>
 <tr><td colspan="2" class="oscTabSection">known issues / todo</td></tr>
 <tr><td class="oscTabKey">elasticResizeMode</td><td class="oscTabValue">not yet implemented (this is always _1_ now)</td></tr>
 <tr><td class="oscTabKey">read</td><td class="oscTabValue">can only be asynchronous. put in a Routine to wait for completion</td></tr>
