--- a/SuperCollider/Help/SwingOSC/SwingGUI.html
+++ b/SuperCollider/Help/SwingOSC/SwingGUI.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingGUI &ndash; Java-based GUI classes</h2>
-<p>last mod: 28-Jan-08 sciss
+<p>last mod: 17-Oct-08 sciss
 </p>
 </div>
 <h1>SwingGUI</h1>
@@ -44,6 +44,7 @@ This class provides access to all <A HREF="SwingOSC.html">SwingOSC</A> view clas
 <tr><td><A HREF="JSCTabletView.html">JSCTabletView</A></td><td>view for graphic tablet control</td></tr>
 <tr><td><A HREF="JPen.html">JPen</A></td><td>tool to use with JSCUserView and JSCWindow</td></tr>
 <tr><td><A HREF="JSCTextView.html">JSCTextView</A></td><td>multiline attributed text editor</td></tr>
+<tr><td><A HREF="JSCPanel.html">JSCPanel</A></td><td>a container with advanced layout management</td></tr>
 <tr><td><A HREF="JSCHLayoutView.html">JSCHLayoutView</A></td><td>container with children placed horizontally</td></tr>
 <tr><td><A HREF="JSCVLayoutView.html">JSCVLayoutView</A></td><td>container with children placed vertically</td></tr>
 <tr><td><A HREF="JSCCompositeView.html">JSCCompositeView</A></td><td>generic container</td></tr>
