--- a/readme.html
+++ b/readme.html
@@ -88,13 +88,13 @@ TD.when {
 </HEAD>
 <BODY>
 <h1>
-SwingOSC <small>-- version 0.61SVN (built 01-oct-08) --</small>
+SwingOSC <small>-- version 0.61 RC SVN-151 (built 13-jan-09) --</small>
 </h1>
 <h3>statement</h3>
 <TABLE><TR><TD VALIGN="top"><IMG SRC="application.png" ALT=""></TD><TD><p>
 SwingOSC is an OpenSoundControl (OSC) server intended for scripting Java(tm), such as to create graphical user interfaces with  AWT or Swing classes. It uses the reflection and beans mechanism to dynamically create instances of java classes and control them. A separate set of SuperCollider language classes is included to allow the building of GUIs from within sclang.
 </P><P>
-SwingOSC is (C)opyright 2005&ndash;2008 by Hanns Holger Rutz. All rights reserved. SwingOSC is released under the <A HREF="licenses/SwingOSC-License.txt">GNU General Public License</A> and comes with absolutely no warranties. To contact the author, send an email to <code>contact&nbsp;at&nbsp;sciss.de</code>
+SwingOSC is (C)opyright 2005&ndash;2009 by Hanns Holger Rutz. All rights reserved. SwingOSC is released under the <A HREF="licenses/SwingOSC-License.txt">GNU General Public License</A> and comes with absolutely no warranties. To contact the author, send an email to <code>contact&nbsp;at&nbsp;sciss.de</code>
 </p></TD></TR></TABLE><p>
 For project status, API and current version, visit <a href="http://www.sciss.de/swingOSC/" class="ext">www.sciss.de/swingOSC</a>.
 </p><p>
@@ -182,7 +182,7 @@ documentation / usage
 compilation
 </h3>
 <P>
-The source code can be compiled using Eclipse SDK 3.2+ (<A HREF="http://www.eclipse.org" CLASS="ext">www.eclipse.org</A>) and Apache Ant 1.6.5+ (<A HREF="http://ant.apache.org/" CLASS="ext">ant.apache.org</A>). You need to install <A HREF="http://ant-contrib.sourceforge.net" CLASS="ext">Ant-Contrib</A> as well (first install Ant if you do not have it, then download Ant-Contrib and copy <code>ant-contrib.jar</code> into Ant's <code>lib</code> folder). The Eclipse project file is configured to run the regular Ant build file. You can make a clean build just with Ant from the terminal:
+The source code can be compiled using Eclipse SDK 3.4+ (<A HREF="http://www.eclipse.org" CLASS="ext">www.eclipse.org</A>) and Apache Ant 1.6.5+ (<A HREF="http://ant.apache.org/" CLASS="ext">ant.apache.org</A>). You need to install <A HREF="http://ant-contrib.sourceforge.net" CLASS="ext">Ant-Contrib</A> as well (first install Ant if you do not have it, then download Ant-Contrib and copy <code>ant-contrib.jar</code> into Ant's <code>lib</code> folder). The Eclipse project file is configured to run the regular Ant build file. You can make a clean build just with Ant from the terminal:
 </P><PRE>> ant clean jar
 > ant test
 </PRE>
