some help updates. jcollider update. peak meter finally working nicely...

--- a/SuperCollider/Help/SwingOSC/JMouseX.html
+++ b/SuperCollider/Help/SwingOSC/JMouseX.html
@@ -19,6 +19,7 @@ This class replaces the UGen by a control bus reader. It does not really track t
 <!-- <tr><td colspan="2" class="oscTabSection">extended functionality</td></tr> -->
 <!-- <tr><td colspan="2" class="oscTabSection">known issues / todo</td></tr> -->
 </table>
+<p>&nbsp;</p>
 </div>
 <h1>JMouseX</h1>
 <p><strong>
