--- a/readme.html
+++ b/readme.html
@@ -88,7 +88,7 @@ TD.when {
 </HEAD>
 <BODY>
 <h1>
-SwingOSC <small>-- version 0.62 SVN (built 23-may-09) --</small>
+SwingOSC <small>-- version 0.62 SVN (built 13-jul-09) --</small>
 </h1>
 <h3>statement</h3>
 <TABLE><TR><TD VALIGN="top"><IMG SRC="application.png" ALT=""></TD><TD><p>
@@ -201,6 +201,7 @@ The <code>&quot;test&quot;</code> will just launch SwingOSC so you can see if th
 <h4>v0.62 (??? 2009 - SVN rev. ???)</h4>
 <UL>
 <LI>SC classes: JSCView (mouse coordinates now relative to view's left-top)</LI>
+<LI>Bug fixes: 2809848, 2809958</LI>
 </UL>
 <h4>v0.61 (may 2009 - SVN rev. 181)</h4>
 <UL>
