--- a/readme.html
+++ b/readme.html
@@ -201,7 +201,7 @@ The <code>&quot;test&quot;</code> will just launch SwingOSC so you can see if th
 <h4>v0.62 (??? 2009 - SVN rev. ???)</h4>
 <UL>
 <LI>SC classes: JSCView (mouse coordinates now relative to view's left-top)</LI>
-<LI>Bug fixes: 2809848, 2809958, 2001007</LI>
+<LI>Bug fixes: 2809848, 2809958, 2001007, 2820992</LI>
 </UL>
 <h4>v0.61 (may 2009 - SVN rev. 181)</h4>
 <UL>
